--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body data-mobile-menu-body-block>
+    <load src="./partials/header.html" />
     <main>
       <load src="./partials/hero.html" />
       <load src="./partials/about-me.html" />
