--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,8 @@
 
         <load src="./partials/mobile-menu.html" />
 
-
-    <script type="module" src="main.js"></script>
-    <script type="module" src="./js/reviews.js"></script>
-    <script type="module" src="./js/mobmenu.js"></script>
+        <script type="module" src="main.js"></script>
+        <script type="module" src="./js/reviews.js"></script>
+        <script type="module" src="./js/header.js"></script>
     </body>
 </html>
