--- a/src/index.html
+++ b/src/index.html
@@ -36,5 +36,6 @@
         <script type="module" src="main.js"></script>
         <script type="module" src="./js/reviews.js"></script>
         <script type="module" src="./js/header.js"></script>
+        <div class="btn-up btn-up_hide"></div>
     </body>
 </html>
