--- a/src/index.html
+++ b/src/index.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Fullstack developer Lloyd Jefferson</title>
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
-        />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@100..900&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="./css/styles.css" />
-    </head>
-    <body data-mobile-menu-body-block>
-        <load src="./partials/header.html" />
-        <main>
-            <load src="./partials/hero.html" />
-            <load src="./partials/about-me.html" />
-            <load src="./partials/benefits.html" />
-            <load src="./partials/projects.html" />
-            <load src="./partials/faq.html" />
-            <load src="./partials/covers.html" />
-            <load src="./partials/reviews.html" />
-        </main>
 
-        <load src="./partials/footer.html" />
+<head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fullstack developer Lloyd Jefferson</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:wght@100..900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/styles.css" />
+</head>
 
-        <load src="./partials/mobile-menu.html" />
+<body data-mobile-menu-body-block>
+    <load src="./partials/header.html" />
+    <main>
+        <load src="./partials/hero.html" />
+        <load src="./partials/about-me.html" />
+        <load src="./partials/benefits.html" />
+        <load src="./partials/projects.html" />
+        <load src="./partials/faq.html" />
+        <load src="./partials/covers.html" />
+        <load src="./partials/reviews.html" />
+    </main>
 
-        <script type="module" src="main.js"></script>
-        <script type="module" src="./js/reviews.js"></script>
-        <script type="module" src="./js/header.js"></script>
-        <div class="btn-up btn-up_hide"></div>
-    </body>
+    <load src="./partials/footer.html" />
+
+    <load src="./partials/mobile-menu.html" />
+
+    <script type="module" src="main.js"></script>
+    <script type="module" src="./js/reviews.js"></script>
+    <script type="module" src="./js/header.js"></script>
+    <!-- <script type="module" src="./js/swiper.js"></script>-->
+    <div class="btn-up btn-up_hide"></div>
+</body>
+
 </html>
