--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
     <script type="module" src="main.js"></script>
     <script type="module" src="./js/reviews.js"></script>
     <script type="module" src="./js/header.js"></script>
-    <!-- <script type="module" src="./js/swiper.js"></script>-->
+    <script type="module" src="./js/swiper.js"></script>
     <div class="btn-up btn-up_hide"></div>
 </body>
 
