--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,7 @@
     <script type="module" src="./js/reviews.js"></script>
     <script type="module" src="./js/header.js"></script>
     <script type="module" src="./js/swiper.js"></script>
+    <script type="module" src="./js/faq.js"></script>
     <div class="btn-up btn-up_hide"></div>
 </body>
 
