--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         <script type="module" src="./js/header.js"></script>
         <script type="module" src="./js/swiper.js"></script>
         <script type="module" src="./js/faq.js"></script>
-        <script type="module" src="./js/footer.js"></script>
+        <script type="module" src="./js/goit-requestsAPI.js"></script>
         <div class="btn-up btn-up_hide"></div>
     </body>
 </html>
