update about-me accordion

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
         <script type="module" src="./js/faq.js"></script>
         <script type="module" src="./js/goit-requestsAPI.js"></script>
         <script type="module" src="./js/about-me-swiper.js"></script>
+        <script type="module" src="./js/about-me-ac.js"></script>
         <div class="btn-up btn-up_hide"></div>
     </body>
 </html>
