--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,7 @@
         <script type="module" src="./js/header.js"></script>
         <script type="module" src="./js/swiper.js"></script>
         <script type="module" src="./js/faq.js"></script>
+        <script type="module" src="./js/covers.js"></script>
         <script type="module" src="./js/goit-requestsAPI.js"></script>
         <script type="module" src="./js/about-me-swiper.js"></script>
         <script type="module" src="./js/about-me-ac.js"></script>
